<resources>
    <string name="app_name">MyMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="money_heist">Money heist</string>
    <string name="rating">Rating:</string>
    <string name="_4_8">4.8</string>
    <string name="votes">Votes:</string>
    <string name="_1023">1023</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie">Movie</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="adult">Adult:</string>
    <string name="no">No</string>
    <string name="original_language">Original Language:</string>
    <string name="title">title</string>
    <string name="original_title">Original Title:</string>
    <string name="release_date">Release Date:</string>
    <string name="_12_6_12">12.6.12</string>
    <string name="popularity">Popularity:</string>
    <string name="_2_0">2.0</string>
</resources>